# timed_lock_alg

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: ci_tests.yml
examples/: CMakeLists.txt  try_lock_a_bunch.cpp  try_lock_until_success.cpp
include/beman/timed_lock_alg/: mutex.hpp
infra/cmake/: use-fetch-content.cmake
tests/beman/timed_lock_alg/: CMakeLists.txt  mock_timed_mutex.hpp  multi_lock.test.cpp  mutex.test.cpp  try_lock.test.cpp
